--- a/index.html
+++ b/index.html
@@ -9,24 +9,29 @@
 <body>
 
 <h2>jonathanbatten's Git Achievements</h2>
-Unlocked 4/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 12 points<br>
+Unlocked 4/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 17 points<br>
 <ul>
 <li><div class="title">Apprentice Carpenter (Level 1)</div>  <div class="info">Custom <a href="http://www.kernel.org/pub/software/scm/git/docs/githooks.html">git-hooks</a> are installed which help catch issues before they are shared.</div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Stone Mason (Level 2)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    111 symbolic-ref
+    151 symbolic-ref
      25 config
      21 achievements
-      6 status
-      6 add
+     16 status
+     13 add
+      4 checkout
       3 clone
       2 remote
+      2 rebase
+      1 pull
       1 fetch
+      1 commit
 </pre>
 <script type="text/javascript">
 function showLocked() {
