--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
 
 <h2>jonathanbatten's Git Achievements</h2>
-Unlocked 7/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 29 points<br>
+Unlocked 8/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 31 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Apprentice Banker (Level 1)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Butcher (Level 1)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Carpenter (Level 1)</div>  <div class="info">Custom <a href="http://www.kernel.org/pub/software/scm/git/docs/githooks.html">git-hooks</a> are installed which help catch issues before they are shared.</div></li>
@@ -24,19 +25,19 @@ Unlocked 7/48 <a href="http://github.com/icefox/git-achievements">Git Achievemen
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    184 symbolic-ref
-     31 status
-     26 add
+    199 symbolic-ref
+     40 status
+     30 add
      25 config
      21 achievements
-      8 checkout
-      4 rebase
+     11 checkout
+      6 rebase
+      3 pull
+      3 commit
       3 clone
       2 remote
-      2 pull
-      2 commit
+      2 merge
       1 push
-      1 merge
       1 fetch
       1 branch
 </pre>
@@ -52,7 +53,6 @@ There are 48 Achievements. Some achievements can be leveled up depending on the 
 <ul>
 <li><div class="title">Architect</div><div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Archivist</div><div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
-<li><div class="title">Banker</div><div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Baptised</div><div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Beach Lion</div><div class="info">Restricted login shell for GIT-only SSH access with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-shell.html">git-shell</a></div></li>
 <li><div class="title">Caretaker</div><div class="info">Added a .gitignore file to a repository.</div></li>
