--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
 
 <h2>jonathanbatten's Git Achievements</h2>
-Unlocked 9/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 45 points<br>
+Unlocked 9/48 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 48 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Banker (Level 1)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
+<li><div class="title">Apprentice Banker (Level 2)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 2)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Butcher (Level 1)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
@@ -30,17 +31,17 @@ Unlocked 9/48 <a href="http://github.com/icefox/git-achievements">Git Achievemen
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    225 symbolic-ref
-     45 status
-     32 add
+    239 symbolic-ref
+     51 status
+     36 add
      25 config
      21 achievements
-     16 checkout
-      8 rebase
+     19 checkout
+     10 rebase
+      5 pull
+      5 commit
       4 push
-      4 pull
-      4 commit
-      3 merge
+      4 merge
       3 clone
       2 remote
       2 branch
